Added dialog to inform user order has been placed, wing combo box, etc

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ClosingScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ClosingScreen.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="ClosingScreen" Height="500" Width="750" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="2,2,2,2" BorderBrush="#FFF4F4F4">
     <Grid Background="#FF344D61">
-        <WrapPanel Margin="10,10,0,0" Height="100" Width="323" HorizontalAlignment="Left" VerticalAlignment="Top" >
-            <Label x:Name="lbl_warning" Content="Thank You" VerticalContentAlignment="Center" FontFamily="Segoe UI Semibold" FontSize="48" Foreground="#FFC1A10F" />
-        </WrapPanel>
+        
+        <Label x:Name="lbl_warning" Content="Thank You" Width="Auto" VerticalContentAlignment="Center" FontFamily="Segoe UI Semibold" FontSize="48" Foreground="#FFC1A10F" VerticalAlignment="Top" Margin="10,10,0,0" />
+        
         <TextBlock x:Name="textBlock" FontSize="24" Margin="55,121,55,159" Foreground="White" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Height="216" FontFamily="Segoe UI Light" Text="Thank you for choosing Kilkenny's Ordering Kiosk. We hope you enjoyed your experience, and come back again." />
 
 
