--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/User Controls/MenuItem_Control.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/User Controls/MenuItem_Control.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype" >
     <Grid Height="165" Width="165" Margin="20">
-        <Button x:Name="btn_viewItem" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="150" Height="150" Click="btn_viewItem_Click">
+        <Button x:Name="btn_viewItem" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="150" Height="150" Click="btn_viewItem_Click" BorderBrush="#FFEEEEEE" BorderThickness="1">
             <Button.Background>
                 <ImageBrush x:Name="background" ImageSource="../Resources/Images/beer.png"/>
             </Button.Background>
