Fixed button focus issue

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -15,27 +15,13 @@
             <Setter Property="Margin" Value="0" />
             <Setter Property="VerticalAlignment" Value="Bottom" />
             <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Background" >
-                <Setter.Value>
-                    <ImageBrush ImageSource="/Resources/Images/btn_specials_bg.png"/>
-                </Setter.Value>
-            </Setter>
-            
+
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
                         <Border Name="border"
         				    Background="{TemplateBinding Background}">
                         </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Setter Property="Background" >
-                                    <Setter.Value>
-                                        <ImageBrush ImageSource="/Resources/Images/btn_specials_down_bg.png"/>
-                                    </Setter.Value>
-                                </Setter>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -58,15 +44,6 @@
                         <Border Name="border"
         				    Background="{TemplateBinding Background}">
                         </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Setter Property="Background" >
-                                    <Setter.Value>
-                                        <ImageBrush ImageSource="/Resources/Images/btn_drinks_down_bg.png"/>
-                                    </Setter.Value>
-                                </Setter>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -89,15 +66,6 @@
                         <Border Name="border"
         				    Background="{TemplateBinding Background}">
                         </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsFocused" Value="True">
-                                <Setter Property="Background" >
-                                    <Setter.Value>
-                                        <ImageBrush ImageSource="/Resources/Images/btn_food_down_bg.png"/>
-                                    </Setter.Value>
-                                </Setter>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
@@ -180,6 +148,9 @@
                             Height="104" 
                             Click="btn_nav_Click"
                             Style="{StaticResource Drinks_btn}">
+                        <Button.Background>
+                            <ImageBrush x:Name="drinks_background" ImageSource="/Resources/Images/btn_drinks_bg.png"/>
+                        </Button.Background>
                     </Button>
 
                     <Button x:Name="btn_food"
@@ -187,6 +158,9 @@
                             Height="104" 
                             Click="btn_nav_Click" 
                             Style="{StaticResource Food_btn}">
+                        <Button.Background>
+                            <ImageBrush x:Name="food_background" ImageSource="/Resources/Images/btn_food_bg.png"/>
+                        </Button.Background>
                     </Button>
 
                     <Button x:Name="btn_help"
