--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
@@ -5,30 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype.Screens"
         mc:Ignorable="d"
-        Title="ExamineItemScreen" Height="300" Width="475" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="2,2,2,2" BorderBrush="#FFF4F4F4">
+        Title="ExamineItemScreen" Height="540" Width="990" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="2,2,2,2" BorderBrush="White">
 
-    <Viewbox Stretch="Fill" >
+
     <Grid >
-        <Border BorderThickness="2,2,2,2" BorderBrush="#FFF4F4F4" >
-            <Image x:Name="image" HorizontalAlignment="Left" Height="135" VerticalAlignment="Top" Width="135" 
-                Margin="10,61,0,0" Source="/Resources/Images/beer.png"/>
-        </Border>
-            <WrapPanel Height="32" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,30">
-                <Label x:Name="lbl_quantity"  Content="Quantity: " FontSize="14"/>
-                <Button x:Name="btn_decrease" Content="&#xE012;" Width="25" FontFamily="Segoe UI Symbol" FontSize="18.667" Background="{x:Null}" BorderBrush="{x:Null}" Click="btn_decrease_Click"/>
-                <TextBlock x:Name="tb_numItems" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="37" FontSize="21.333" TextAlignment="Center"/>
-                <Button x:Name="btn_increase" Content="&#xE013;" Width="25" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click"/>
-            </WrapPanel>
-        <Button x:Name="btn_addToTray" Content="Add to tray" HorizontalAlignment="Left" Margin="301,252,0,0" VerticalAlignment="Top" Width="153" Height="30"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBlock x:Name="tb_description" HorizontalAlignment="Left" Height="115" Margin="168,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus mi vel malesuada sollicitudin. Suspendisse in cursus ex. Cras placerat in diam sodales pellentesque. Nulla lacinia nunc commodo neque tristique varius. Fusce iaculis euismod mattis. In quis lacus elit. Phasellus vitae placerat mi."/>
-        <Button x:Name="btn_close" Content="&#xE10A;"  VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="30" FontFamily="Segoe UI Symbol" FontSize="18.667" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="#FFEE516C" Click="btn_close_Click"/>
         <Label x:Name="lbl_sides" Content="Flavors:" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" HorizontalContentAlignment="Left" FontSize="16" Visibility="Collapsed"/>
         <ComboBox x:Name="dd_sides" HorizontalAlignment="Left" VerticalAlignment="Top" Height="30"  Width="120" Margin="10,252,0,0" SelectionChanged="dd_sides_SelectionChanged" Visibility="Collapsed" />
 
-            <Label x:Name="lbl_itemName" Content="Gas Lamp - Nut Brown" HorizontalAlignment="Left" Margin="10,20,0,0" VerticalAlignment="Top" Foreground="#FF344D61" FontFamily="Segoe UI Light" FontSize="16"/>
-        <Label x:Name="lbl_itemPrice" Content="$5.25" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Margin="82,170,0,0" VerticalAlignment="Top" FontFamily="Segoe UI Light" Background="#FF00BB97" Foreground="White" Width="62" Opacity="0.75"/>
+        <Grid HorizontalAlignment="Stretch" Height="70" VerticalAlignment="Top" Background="#FF213F57">
+            <Label x:Name="lbl_itemName" Content="Drink Label" HorizontalAlignment="Left"  HorizontalContentAlignment="Left" VerticalContentAlignment="Center" VerticalAlignment="Top" FontSize="34" Foreground="White" Background="{x:Null}" Margin="25,0,0,0" Height="70"/>
+            <Button x:Name="btn_close" Content="&#xE10A;"  VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Right" Width="65" Height="70" FontFamily="Segoe UI Symbol" FontSize="28" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" Click="btn_close_Click" Margin="0"/>
+        </Grid>
+
+        <Canvas Height="200" Width="200" Margin="25,130,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <Canvas.Effect>
+                <DropShadowEffect ShadowDepth="0" BlurRadius="35" Opacity="0.25"/>
+            </Canvas.Effect>
+            <Image x:Name="image" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="200" Height="200" Source="/Resources/Images/beer.png" />
+            <Label x:Name="lbl_itemPrice" Content="$0.00" HorizontalContentAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Light" Background="#CC00BB97" Foreground="White" Width="120" FontSize="22" Canvas.Left="90" Canvas.Top="171"/>
+        </Canvas>
+
+        <Label x:Name="label" Content="Description" HorizontalAlignment="Right" Margin="0,135,25,0" VerticalAlignment="Top" Width="650" FontSize="22"/>
+        <TextBlock x:Name="tb_description" Padding="6" HorizontalAlignment="Right" Height="163" Margin="0,172,25,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="650" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus mi vel malesuada sollicitudin. Suspendisse in cursus ex. Cras placerat in diam sodales pellentesque. Nulla lacinia nunc commodo neque tristique varius. Fusce iaculis euismod mattis. In quis lacus elit. Phasellus vitae placerat mi." FontSize="22" FontFamily="Segoe UI Light"/>
+
+
+        <GridSplitter x:Name="gridSplitter" Height="2" Margin="0,339,25,0" VerticalAlignment="Top" Width="650" RenderTransformOrigin="0.5,0.5">
+            <GridSplitter.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </GridSplitter.RenderTransform>
+        </GridSplitter>
+
+        <WrapPanel Height="60" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,25,100" Width="250">
+            <Label x:Name="lbl_quantity"  VerticalContentAlignment="Center" Content="Quantity" FontSize="22" FontFamily="Segoe UI Light"/>
+            <Button x:Name="btn_decrease" Content="&#xE012;" Width="60" VerticalContentAlignment="Top" FontFamily="Segoe UI Symbol" FontSize="36" Background="{x:Null}" BorderBrush="{x:Null}" Click="btn_decrease_Click" FontWeight="Bold" Foreground="#FF00BB97"/>
+            <TextBlock x:Name="tb_numItems" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="40" FontSize="40" TextAlignment="Center" FontFamily="Segoe UI Light" Height="60" Margin="0,3,0,0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_increase" Content="&#xE013;" Width="60"  VerticalContentAlignment="Top"  FontFamily="Segoe UI Symbol" FontSize="36" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click" FontWeight="Bold" Foreground="#FF00BB97" HorizontalAlignment="Right" VerticalAlignment="Top" Height="60"/>
+        </WrapPanel>
+        <Button x:Name="btn_addToTray" Content="Add to tray" HorizontalAlignment="Right" Margin="0,0,25,25" VerticalAlignment="Bottom" Height="52"  Width="250"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="14" BorderBrush="{x:Null}"/>
 
 
     </Grid>
-    </Viewbox>
 </Window>
